Adding second state of the website

--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
             <div class="overflow-hidden relative h-full">
                 <img src="./img/selected-pics/foto1.jpeg" alt="Clinica 1" class="gallery-img object-cover">
                 <img src="./img/selected-pics/foto2.jpeg" alt="Clinica 2" class="gallery-img hidden object-cover">
+                <img src="./img/selected-pics/foto3.jpeg" alt="Clinica 2" class="gallery-img hidden object-cover">
                 <img src="./img/selected-pics/foto4.jpeg" alt="Clinica 3" class="gallery-img hidden object-cover">
                 <img src="./img/selected-pics/foto5.jpeg" alt="Clinica 4" class="gallery-img hidden object-cover">
+                <img src="./img/selected-pics/foto6.jpeg" alt="Clinica 4" class="gallery-img hidden object-cover">
                 <img src="./img/selected-pics/foto7.jpeg" alt="Clinica 5" class="gallery-img hidden object-cover">
+                <img src="./img/selected-pics/foto8.jpeg" alt="Clinica 5" class="gallery-img hidden object-cover">
+                <img src="./img/selected-pics/foto9.jpeg" alt="Clinica 5" class="gallery-img hidden object-cover">
             </div>
             <!-- Arrows for navigation -->
             <button id="prev" class="absolute left-1 top-1/2 transform -translate-y-1/2 bg-black text-white px-2 py-1 rounded-full z-10 hover:bg-gray-800">‹</button>
@@ -135,8 +139,9 @@
             <br> <!-- Added new line -->
             <div class="flex justify-center">
                 <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d753.2033359918307!2d-5.662032630486873!3d40.96366771091246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNDDCsDU3JzQ5LjIiTiA1wrAzOSc0MS4wIlc!5e0!3m2!1ses!2ses!4v1726268097086!5m2!1ses!2ses"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="rounded-lg shadow-md"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6025.63554331585!2d-5.6639085250145085!3d40.96357072217813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd3f26137e37a91f%3A0x18c4a7261d572d89!2sAURUM%20Centro%20Odontol%C3%B3gico%20-%20Dr.%20Sergio%20Parra%20Garc%C3%ADa!5e0!3m2!1ses!2ses!4v1728120725646!5m2!1ses!2ses"
+                width="800" height="600" style="border:0;" allowfullscreen="" 
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </section>
