Fix in maps iwidget size

--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
             <p class="text-lg mt-4">C/ Gran Vía, 67, 2C; DUP 67-69. 37001, Salamanca.</p>
             <br> <!-- Added new line -->
             <div class="flex justify-center">
-                <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6025.63554331585!2d-5.6639085250145085!3d40.96357072217813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd3f26137e37a91f%3A0x18c4a7261d572d89!2sAURUM%20Centro%20Odontol%C3%B3gico%20-%20Dr.%20Sergio%20Parra%20Garc%C3%ADa!5e0!3m2!1ses!2ses!4v1728120725646!5m2!1ses!2ses"
-                width="800" height="600" style="border:0;" allowfullscreen="" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6025.63554331585!2d-5.6639085250145085!3d40.96357072217813!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd3f26137e37a91f%3A0x18c4a7261d572d89!2sAURUM%20Centro%20Odontol%C3%B3gico%20-%20Dr.%20Sergio%20Parra%20Garc%C3%ADa!5e0!3m2!1ses!2ses!4v1728122984466!5m2!1ses!2ses"
+                width="600" height="450" style="border:0;" allowfullscreen=""
                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
